# VoidFrame

./: .gitignore  CMakeLists.txt  Makefile  README.md  grub.cfg  linker.ld  meson.build  meson_options.txt  vfconfig.py  voidframe.ld  xmake.lua
.github/workflows/: main.yaml
Boot/: boot.asm
Kernel/: Cpu.h  Gdt.c  Gdt.h  Idt.c  Idt.h  Interrupts.c  Interrupts.s  Io.h  Kernel.c  Kernel.h  MemOps.c  Memory.c  Memory.h  Panic.c  Panic.h  Pic.c  Process.c  Process.h  Switch.asm  Switch.s  Syscall.c  Syscall.h  UserMode.c  VMem.c  stdint.h
Kernel/Atomic/: Atomics.c  Atomics.h
Kernel/Core/: Ipc.c  Ipc.h  Kernel.c  Kernel.h  Panic.c  Panic.h  Shell.c  Shell.h  stdarg.h  stdbool.h  stdint.h
Kernel/Drivers/: Cpu.c  Cpu.h  Driver.c  Driver.h  Interrupts.c  Interrupts.h  Keyboard.c  Pic.c  Pic.h
Kernel/Memory/: MemOps.c  MemOps.h  Memory.c  Memory.h  VMem.c  VMem.h
Kernel/Process/: Process.c  Process.h  Switch.asm
Kernel/System/: Gdt.c  Gdt.h  Idt.c  Idt.h  Syscall.c  Syscall.h  SyscallEntry.asm
arch/: README.md
arch/x86_64/: README.md
arch/x86_64/asm/: README.md  bss.asm  features.asm  gdt.asm  macros.asm  multiboot2.asm  pxs.asm
arch/x86_64/cpu/: Cpu.c  Cpu.h
arch/x86_64/features/: README.md  x64.c  x64.h
arch/x86_64/gdt/: Gdt.c  Gdt.h  GdtFlush.asm  GdtTssFlush.asm  README.md
arch/x86_64/idt/: Idt.c  Idt.h  README.md
arch/x86_64/interrupts/: Interrupts.asm  Interrupts.c  Interrupts.h  README.md
arch/x86_64/syscall/: README.md  Syscall.c  Syscall.h  SyscallEntry.asm
cmake/: README.md  cache.cmake  ccache.cmake  clang-x64.cmake  configuration.cmake  dependencies.cmake  features.cmake  flags.cmake  run.cmake  rust_utils.cmake  source.cmake  variable.cmake
cmake/toolchain/: linux-x64.cmake  macos-x64.cmake  windows-x64.cmake
crypto/: CRC32.c  CRC32.h  RNG.c  RNG.h  SHA256.c  SHA256.h
docs/: ARCHITECHTURE.md  ARCHITECTURE.md  BUILD.md  CMAKE.md  DEVELOPMENT.md  README.md  ROADMAP.md  STARTUP.md  STRUCTURE.md  TIMING_UPGRADE.md
drivers/: ACPI.c  ACPI.h  APIC.c  APIC.h  Apic.c  Ide.c  Ide.h  InterruptController.c  InterruptController.h  Keyboard.c  Keyboard.h  PS2.c  PS2.h  PS2Keymap.c  PS2Keymap.h  Pic.c  Pic.h  README.md  Random.c  Random.h  Serial.c  Serial.h  TSC.c  TSC.h  Vesa.c  Vesa.h  VesaBIOSExtension.c  VesaBIOSExtension.h
drivers/APIC/: APIC.c  APIC.h  README.md
drivers/ISA/: ISA.c  ISA.h  README.md
drivers/LPT/: LPT.c  LPT.h  README.md
drivers/OPIC/: OPIC.c  OPIC.h  README.md
drivers/PCI/: PCI.c  PCI.h  README.md
drivers/RTC/: README.md  Rtc.c  Rtc.h
drivers/USB/: xHCI.c  xHCI.h
drivers/ethernet/: Network.c  Network.h  Packet.h  README.md  RTL8139.c  RTL8139.h
drivers/ethernet/intel/: E1000.c  E1000.h  README.md
drivers/ethernet/interface/: Arp.c  Arp.h  Icmp.c  Icmp.h  Ip.c  Ip.h  README.md
drivers/ethernet/realtek/: README.md  RTL8139.c  RTL8139.h
drivers/input/: Keyboard.c  Keyboard.h  README.md
drivers/sound/: Generic.c  Generic.h  README.md  SB16.c  SB16.h
drivers/storage/: AHCI.c  AHCI.h  Ide.c  Ide.h  NVMe.c  NVMe.h  README.md
drivers/usb/: README.md
drivers/usb/hid/: README.md  USBKeyboard.c  USBKeyboard.h
drivers/virtio/: README.md  Virtio.h  VirtioBlk.c  VirtioBlk.h
drivers/vmware/: README.md  SVGAII.c  SVGAII.h
drivers/xHCI/: README.md  xHCI.c  xHCI.h
fs/: BlockDevice.c  BlockDevice.h  CharDevice.c  CharDevice.h  DriveNaming.c  DriveNaming.h  FAT12.c  FAT12.h  FAT1x.c  FAT1x.h  FileSystem.c  FileSystem.h  Fs.c  Fs.h  FsUtils.c  FsUtils.h  Iso9660.c  Iso9660.h  MBR.c  MBR.h  README.md  VFRFS.c  VFRFS.h  VFS.c  VFS.h
fs/EXT/: Ext2.c  Ext2.h  README.md
fs/FAT/: FAT1x.c  FAT1x.h  README.md
fs/NTFS/: NTFS.c  NTFS.h  README.md
fs/devfs/: DevFS.c  DevFS.h
fs/procfs/: ProcFS.c  ProcFS.h
include/: Font.c  Font.h  Io.c  Io.h  KernelConstants.h  Ltypes.h  Paging.asm  Paging.h  README.md  RustKernelHeap.h  Scheduler.h  Switch.asm  Switch.h  Vector.h  Window.h  ctype.c  ctype.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdlib.h
include/Switch/: README.md  Switch.h
include/Vector/: README.md  Vector.h
kernel/: README.md
kernel/atomic/: Atomics.c  Atomics.h  README.md  Spinlock.h  SpinlockRust.h
kernel/atomic/cpp/: Spinlock.cpp  Spinlock.h
kernel/atomic/rust/: CMakeLists.txt  Cargo.toml  README.md
kernel/atomic/rust/src/: ffi.rs  lib.rs  mcs.rs  rwlock.rs  spinlock.rs
kernel/core/: Compositor.c  Compositor.h  InitRD.c  InitRD.h  Kernel.c  Kernel.h  Multiboot2.h  Pallete.h  Panic.c  Panic.h  README.md
kernel/elf/: ELFloader.c  ELFloader.h
kernel/etc/: Console.c  Console.h  Editor.c  Editor.h  Format.c  Format.h  POST.c  POST.h  README.md  Shell.c  Shell.h  Splash.c  Splash.h  StringOps.c  StringOps.h  VBEConsole.c  VBEConsole.h
kernel/execf/: ExecLoader.c  ExecLoader.h  README.md
kernel/ipc/: Ipc.c  Ipc.h  README.md
kernel/memory/: AsmHelpers.asm  AsmHelpers.h  KernelHeap.c  KernelHeap.h  MemOps.c  MemOps.h  Memory.c  Memory.h  PhysicalMemoryManager.c  PhysicalMemoryManager.h  StackGuard.c  StackGuard.h  VMem.c  VMem.h
kernel/process/: Elf.h  Process.c  Process.h  UserMode.c  UserMode.h
kernel/sched/: CFS.c  CFS.h  EEVDF.c  EEVDF.h  MLFQ.c  MLFQ.h  README.md  Scheduler.c  Shared.h
kernel/ubsan/: Sanitizer.c
mm/: KernelHeap.c  KernelHeap.h  KernelHeapRust.h  MemOps.c  MemOps.h  MemPool.c  MemPool.h  PMem.c  PMem.h  PageFaultHandler.c  PageFaultHandler.h  README.md  StackGuard.c  StackGuard.h  VMem.c  VMem.cpp  VMem.h
mm/asm/: README.md  memcmp.asm  memcpy.asm  memset.asm  zeropage.asm
mm/rust/: CMakeLists.txt  Cargo.toml
mm/rust/.cargo/: config.toml
mm/rust/src/: backend.rs  heap.rs  lib.rs  rust_heap.rs
mm/security/: Cerberus.c  Cerberus.h  README.md
mm/trace/: README.md  StackTrace.c  StackTrace.h
ports/: README.md
ports/6502/: 6502.cpp  6502.h  README.md
rust_core/: Cargo.toml
rust_core/src/: lib.rs  vmm.rs
scripts/: README.md  bochs.bxrc  converter.sh  elf.ld  mangle.py
scripts/legacy/: meson_options.txt
src/drivers/: Pic.h
vfcompositor/: Compositor.c  Compositor.h
vfcompositor/app/: GUIShell.c  GUIShell.h
(+32 files in other folders)
